--- a/SheepJumpEatCoin/Level03.plist
+++ b/SheepJumpEatCoin/Level03.plist
@@ -1076,7 +1076,7 @@
 				<key>x</key>
 				<integer>220</integer>
 				<key>y</key>
-				<real>2900</real>
+				<real>2800</real>
 			</dict>
 			<dict>
 				<key>pattern</key>
@@ -1108,7 +1108,7 @@
 				<key>x</key>
 				<integer>250</integer>
 				<key>y</key>
-				<real>5080</real>
+				<integer>4980</integer>
 			</dict>
 			<dict>
 				<key>pattern</key>
@@ -1116,7 +1116,7 @@
 				<key>x</key>
 				<integer>200</integer>
 				<key>y</key>
-				<real>5740</real>
+				<real>5640</real>
 			</dict>
 			<dict>
 				<key>pattern</key>
@@ -1124,7 +1124,7 @@
 				<key>x</key>
 				<integer>150</integer>
 				<key>y</key>
-				<real>6400</real>
+				<real>6300</real>
 			</dict>
 			<dict>
 				<key>pattern</key>
